# AAE4011-Assignment-1

./: Packages  README.md  Scripts  packages.xml
Launch/: detection_pipeline.launch.xml
vehicle detection/: CMakeLists.txt
vehicle detection/Scripts/: detection UI.py  extract image.py  vehicle detector.py
